--- a/index.html
+++ b/index.html
@@ -77,7 +77,6 @@
 
             <span class="question-label">Etapa 1 — Verificação</span>
             <h2 class="question-title">Você recebeu a notificação oficial nos últimos 30 dias?</h2>
-            <p class="question-subtitle">Isso é importante para definir o prazo do seu recurso.</p>
 
             <div class="options-list">
                 <button class="option-card" data-value="sim">
@@ -100,8 +99,7 @@
         <section id="filtro" class="screen question-screen">
 
             <span class="question-label">Etapa 2 — Tipo de Infração</span>
-            <h2 class="question-title">Qual o motivo da infração que consta na notificação?</h2>
-            <p class="question-subtitle">Selecione a opção que melhor descreve sua multa.</p>
+            <h2 class="question-title">Qual o motivo da infração?</h2>
 
             <div class="options-list">
                 <button class="option-card" data-value="lei_seca">
@@ -231,8 +229,8 @@
             </h2>
 
             <p class="result-text">
-                Nossa análise identificou <strong>inconsistências técnicas</strong> na sua notificação. Recorrer é a
-                melhor estratégia para <strong>congelar seus pontos</strong> e evitar o pagamento indevido.
+                Identificamos <strong>inconsistências técnicas</strong> na sua notificação. Recorra para
+                <strong>congelar seus pontos</strong> e evitar o pagamento.
             </p>
 
             <div class="result-metrics">
@@ -262,7 +260,6 @@
 
             <span class="question-label">Como Funciona</span>
             <h2 class="question-title">Sua defesa em 3 passos simples</h2>
-            <p class="question-subtitle">Veja como é fácil proteger sua CNH e seu bolso.</p>
 
             <div class="howit-steps">
 
@@ -374,7 +371,6 @@
 
             <div class="form-header">
                 <h2 class="form-title">Preencha seus dados</h2>
-                <p class="form-subtitle">Necessário para elaborar seu recurso personalizado.</p>
             </div>
 
             <!-- Dados Pessoais -->
@@ -463,7 +459,8 @@
 
             <div class="footer">
                 <p class="footer-text">🔒 Seus dados estão seguros. Atuamos em conformidade total com a
-                    <strong>LGPD</strong>.</p>
+                    <strong>LGPD</strong>.
+                </p>
             </div>
 
         </section>
