fix: hook screen mais limpa - prova social inline e rodape minimo

--- a/index.html
+++ b/index.html
@@ -38,23 +38,12 @@
             </h1>
 
             <p class="hook-subheadline">
-                <strong>73% das multas</strong> aplicadas pelos órgãos de trânsito têm <strong>ALTAS CHANCES</strong> de
-                ser anuladas. Faça o teste <strong>AGORA</strong> e veja se você pode <strong>ANULAR</strong> a sua.
+                <strong>73% das multas</strong> têm <strong>ALTAS CHANCES</strong> de ser anuladas.<br>
+                Descubra se a sua é uma delas.
             </p>
 
-            <div class="hook-stats">
-                <div class="hook-stat">
-                    <span class="hook-stat-number">73%</span>
-                    <span class="hook-stat-label">Chances de Anulação</span>
-                </div>
-                <div class="hook-stat">
-                    <span class="hook-stat-number">12k+</span>
-                    <span class="hook-stat-label">Multas Analisadas</span>
-                </div>
-                <div class="hook-stat">
-                    <span class="hook-stat-number">2min</span>
-                    <span class="hook-stat-label">Tempo do Teste</span>
-                </div>
+            <div class="hook-social-proof">
+                ⭐ 12.847 motoristas já verificaram · Leva 2 minutos
             </div>
 
             <button id="btn-start" class="btn btn-primary btn-pulse">
@@ -62,13 +51,9 @@
                 VERIFICAR MINHA MULTA AGORA
             </button>
 
-            <div class="footer" style="margin-top: 32px; border: none; padding-bottom: 0;">
-                <p class="footer-text">
-                    🔒 Teste 100% gratuito e confidencial<br />
-                    <strong>DOCUMENTA SERVIÇOS EMPRESARIAIS INTEGRADOS LTDA</strong><br />
-                    CNPJ: 54.601.720/0001-31
-                </p>
-            </div>
+            <p class="hook-footer-minimal">
+                🔒 Gratuito e confidencial · CNPJ: 54.601.720/0001-31
+            </p>
 
         </section>
 
