fix: remove contagem de etapas e implementa barra de progresso inteligente

--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
 
         <!-- TELA 2: NOME -->
         <section id="id-nome" class="screen question-screen">
-            <span class="question-label">Etapa 1 — Identificação</span>
             <h2 class="question-title">Qual é o seu nome completo?</h2>
 
             <div class="input-group">
@@ -77,7 +76,6 @@
 
         <!-- TELA 3: WHATSAPP -->
         <section id="id-whatsapp" class="screen question-screen">
-            <span class="question-label">Etapa 2 — Contato</span>
             <h2 class="question-title">Qual seu WhatsApp com DDD?</h2>
 
             <div class="input-group">
@@ -93,7 +91,6 @@
 
         <!-- TELA 4: DEPENDE DA CNH -->
         <section id="id-cnh" class="screen question-screen">
-            <span class="question-label">Etapa 3 — Perfil</span>
             <h2 class="question-title">Você depende da sua CNH para trabalhar?</h2>
 
             <div class="options-list">
@@ -124,7 +121,6 @@
 
         <!-- TELA 6: PROPRIETÁRIO -->
         <section id="id-proprietario" class="screen question-screen">
-            <span class="question-label">Etapa 4 — Veículo</span>
             <h2 class="question-title">Você é o proprietário do veículo que foi multado?</h2>
 
             <div class="options-list">
@@ -141,7 +137,6 @@
 
         <!-- TELA 7: CONDUTOR -->
         <section id="id-condutor" class="screen question-screen">
-            <span class="question-label">Etapa 5 — Condutor</span>
             <h2 class="question-title">Você era o condutor no momento da infração?</h2>
 
             <div class="options-list">
@@ -160,7 +155,6 @@
 
         <!-- TELA 8: FILTRO CRÍTICO (Logic Jump) -->
         <section id="filtro" class="screen question-screen">
-            <span class="question-label">Etapa 6 — Tipo de Infração</span>
             <h2 class="question-title">Qual o motivo da infração?</h2>
 
             <div class="options-list">
@@ -194,7 +188,6 @@
 
         <!-- TELA 9: SEGMENTAÇÃO (Prazo) -->
         <section id="segmentacao" class="screen question-screen">
-            <span class="question-label">Etapa 7 — Prazo</span>
             <h2 class="question-title">Você recebeu a notificação oficial nos últimos 30 dias?</h2>
 
             <div class="options-list">
@@ -247,8 +240,7 @@
         <!-- ========== TELA 4: UPLOAD ========== -->
         <section id="upload" class="screen upload-screen">
 
-            <span class="question-label">Etapa 3 — Envio da Multa</span>
-            <h2 class="question-title">Tire uma foto nítida da sua multa ou faça o upload.</h2>
+            <h2 class="question-title">Envie uma foto nítida da sua multa</h2>
             <p class="question-subtitle">Aceitos: Fotos (JPG, PNG) e documentos (PDF).</p>
 
             <div id="upload-area" class="upload-area">
@@ -337,7 +329,7 @@
         <!-- ========== TELA 7: COMO FUNCIONA ========== -->
         <section id="comofunciona" class="screen howit-screen">
 
-            <span class="question-label">Como Funciona</span>
+
             <h2 class="question-title">Sua defesa em 3 passos simples</h2>
 
             <div class="howit-steps">
