feat: adiciona botao voltar com historico de navegacao

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <div class="progress-bar-fill"></div>
             </div>
             <div class="progress-info">
+                <button id="btn-back" class="btn-back" aria-label="Voltar" style="visibility:hidden;">←</button>
                 <span class="progress-logo">CAÇA<span>MULTAS</span></span>
             </div>
         </div>
