feat: adiciona telas de persuasao Contestacao e Recurso apos Diagnostico

--- a/index.html
+++ b/index.html
@@ -321,12 +321,80 @@
 
             <button id="btn-defesa" class="btn btn-primary btn-pulse">
                 <span class="btn-icon">🛡️</span>
-                VER COMO FUNCIONA
+                CONTINUAR
             </button>
 
         </section>
 
-        <!-- ========== TELA 7: COMO FUNCIONA ========== -->
+        <!-- ========== TELA: CONTESTAÇÃO ========== -->
+        <section id="contestacao" class="screen persuasion-screen">
+
+            <h2 class="persuasion-title">Agora você pode <strong class="highlight-green">CONTESTAR</strong> essa multa!
+            </h2>
+
+            <p class="persuasion-text">Para isso, basta fazer um <strong>Recurso Administrativo</strong> junto ao órgão
+                de trânsito.</p>
+
+            <h3 class="persuasion-subtitle">Fazendo esse Recurso, você vai:</h3>
+
+            <div class="persuasion-benefits">
+                <div class="persuasion-benefit">
+                    <span class="persuasion-benefit-icon">⏸️</span>
+                    <div>
+                        <strong>Suspender o pagamento:</strong> Enquanto o recurso está em análise, a cobrança da multa
+                        fica suspensa.
+                    </div>
+                </div>
+                <div class="persuasion-benefit">
+                    <span class="persuasion-benefit-icon">🛡️</span>
+                    <div>
+                        <strong>Proteger sua carteira:</strong> Os pontos não entram na sua CNH enquanto você recorre.
+                        Você continua dirigindo tranquilamente sem ter a carteira cassada.
+                    </div>
+                </div>
+                <div class="persuasion-benefit">
+                    <span class="persuasion-benefit-icon">✅</span>
+                    <div>
+                        <strong>Ter altas chances de anular a multa:</strong> +12.000 multas já foram anuladas por
+                        nossos recursos.
+                    </div>
+                </div>
+            </div>
+
+            <button id="btn-contestacao" class="btn btn-primary btn-pulse">
+                <span class="btn-icon">🚀</span>
+                SIM, É ISSO QUE EU QUERO!
+            </button>
+
+        </section>
+
+        <!-- ========== TELA: RECURSO ========== -->
+        <section id="recurso" class="screen persuasion-screen">
+
+            <h2 class="persuasion-title">Tá, mas como eu faço esse Recurso?</h2>
+
+            <p class="persuasion-lead">Não se preocupe com isso, <strong>nós fazemos por você.</strong></p>
+
+            <div class="persuasion-highlights">
+                <div class="persuasion-highlight">
+                    <span class="persuasion-highlight-icon">👨‍💼</span>
+                    <p>Nossa equipe faz <strong>todo o trabalho difícil</strong></p>
+                </div>
+                <div class="persuasion-highlight">
+                    <span class="persuasion-highlight-icon">📄</span>
+                    <p>E você recebe o recurso <strong>em PDF no e-mail</strong>, pronto para enviar ao órgão de
+                        trânsito.</p>
+                </div>
+            </div>
+
+            <button id="btn-recurso" class="btn btn-primary btn-pulse">
+                <span class="btn-icon">🎯</span>
+                ANULAR MINHA MULTA AGORA!
+            </button>
+
+        </section>
+
+        <!-- ========== TELA: COMO FUNCIONA ========== -->
         <section id="comofunciona" class="screen howit-screen">
 
 
